Fix designs for past event on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -646,6 +646,11 @@ body {
       left: 22px;
     }
   }
+  .no-hero {
+    .logo {
+      top: 27px;
+    }
+  }
   .main-nav-section {
     margin-top: 82px;
     h1 {
@@ -660,7 +665,25 @@ body {
   .single-event-info {
     &.main-nav-section h1 {
       max-width: 400px;
-      margin: 0 auto 42px;
+      margin: 0 auto 72px;
+    }
+    .icon-container {
+      display: inline-block;
+      vertical-align: middle;
+      margin-right: 20px;
+    }
+    .row {
+      max-width: 300px;
+      margin: 0 auto;
+    }
+    .name {
+      display: inline-block;
+      vertical-align: middle;
+      font-weight: normal;
+    }
+    .col-md-4 {
+      text-align: left;
+      margin-bottom: 30px;
     }
   }
   .what-is-spodari {
@@ -709,6 +732,19 @@ body {
       -webkit-border-radius: 52px;
       -moz-border-radius: 52px;
       border-radius: 52px;
+      margin-bottom: 20px;
+    }
+  }
+  .event-details.main-nav-section {
+    img {
+      max-width: 100%;
+    }
+  }
+  .single-event-gallery {
+    .row {
+      margin-bottom: 20px;
+    }
+    .col-md-3 {
       margin-bottom: 20px;
     }
   }
